--- a/styles/GlobalStyles.css
+++ b/styles/GlobalStyles.css
@@ -84,7 +84,7 @@ body > :first-child {
   display: grid;
   grid-template-columns: 100vw;
   grid-template-rows: auto 1fr auto;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   position: relative;
 }
 
